pulizia branch e rinominazione file

--- a/all_ML_text_analysis (CV).ipynb
+++ b/all_ML_text_analysis (CV).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,24 +14,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tecniche di ML a confronto\n",
+    "In questo jupyter vengono confrontate le prestazioni delle varie classificazioni di ciascun modello.\n",
+    "Il metodo utilizzato è CountVectorizer con una tokenizzazione regex."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Per la realizzazione ho seguito https://www.datacamp.com/tutorial/text-analytics-beginners-nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('description_predictions.csv', index_col=0)\n",
-    "with open(\"sinonimi.json\") as jsonFile:\n",
+    "dataset = pd.read_csv('../description_predictions.csv', index_col=0)\n",
+    "with open(\"../sinonimi.json\") as jsonFile:\n",
     "    jsonObject = json.load(jsonFile)\n",
     "    jsonFile.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"for i, row in dataset_withoutNAN.iterrows():\\n    h_team, a_team, description, prediction = row.h_team, row.a_team, row.description, row.prediction\\n\\n    syn = {}\\n    #cerco nel dizionario di sinonimi, tutti i sinonimi delle squadre del match\\n    for key in jsonObject.keys():\\n        if (h_team in key) or (key in h_team):\\n            syn['home team'] = jsonObject[key] \\n            \\n        if (a_team in key) or (key in a_team):\\n            syn['away team'] = jsonObject[key] \\n\\n    #successivamente prendo il testo e sostituisco i sinonimi con home o away team\\n    description = description.lower()\\n    for key in syn.keys():\\n        for val in syn[key]:\\n            description = description.replace(val.lower(), key)\\n\\n    dataset_withoutNAN.at[i, 'description'] = description\\n\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"for i, row in dataset_withoutNAN.iterrows():\n",
     "    h_team, a_team, description, prediction = row.h_team, row.a_team, row.description, row.prediction\n",
@@ -77,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,27 +128,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>home team and away team take on each other in ...</td>\n",
+       "      <td>Verona and Sassuolo take on each other in a hi...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>home team begin their title defence with a mat...</td>\n",
+       "      <td>Inter begin their title defence with a match a...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>away team will look to make a flying start to ...</td>\n",
+       "      <td>Atalanta will look to make a flying start to t...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>newcomers home team will be aiming to kick off...</td>\n",
+       "      <td>Newcomers Empoli will be aiming to kick off th...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>after failing to impress in the 2020/21 serie ...</td>\n",
+       "      <td>After failing to impress in the 2020/21 Serie ...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -137,14 +157,14 @@
       ],
       "text/plain": [
        "                                         description  prediction\n",
-       "0  home team and away team take on each other in ...           0\n",
-       "1  home team begin their title defence with a mat...           1\n",
-       "2  away team will look to make a flying start to ...           2\n",
-       "3  newcomers home team will be aiming to kick off...           2\n",
-       "4  after failing to impress in the 2020/21 serie ...           2"
+       "0  Verona and Sassuolo take on each other in a hi...           0\n",
+       "1  Inter begin their title defence with a match a...           1\n",
+       "2  Atalanta will look to make a flying start to t...           2\n",
+       "3  Newcomers Empoli will be aiming to kick off th...           2\n",
+       "4  After failing to impress in the 2020/21 Serie ...           2"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -288,63 +308,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.675439</td>\n",
-       "      <td>0.728956</td>\n",
-       "      <td>0.610374</td>\n",
-       "      <td>0.611306</td>\n",
-       "      <td>0.709647</td>\n",
-       "      <td>0.675439</td>\n",
-       "      <td>0.641975</td>\n",
+       "      <td>0.657895</td>\n",
+       "      <td>0.689363</td>\n",
+       "      <td>0.580004</td>\n",
+       "      <td>0.572764</td>\n",
+       "      <td>0.678354</td>\n",
+       "      <td>0.657895</td>\n",
+       "      <td>0.612296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Support Vector Machine</th>\n",
-       "      <td>0.552632</td>\n",
-       "      <td>0.501618</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.390323</td>\n",
-       "      <td>0.519758</td>\n",
-       "      <td>0.552632</td>\n",
-       "      <td>0.450792</td>\n",
+       "      <td>0.464912</td>\n",
+       "      <td>0.486726</td>\n",
+       "      <td>0.343434</td>\n",
+       "      <td>0.229709</td>\n",
+       "      <td>0.499379</td>\n",
+       "      <td>0.464912</td>\n",
+       "      <td>0.304535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Multinomial Naive Bayes</th>\n",
-       "      <td>0.710526</td>\n",
-       "      <td>0.717405</td>\n",
-       "      <td>0.653565</td>\n",
-       "      <td>0.655152</td>\n",
-       "      <td>0.713004</td>\n",
-       "      <td>0.710526</td>\n",
-       "      <td>0.685058</td>\n",
+       "      <td>0.657895</td>\n",
+       "      <td>0.619405</td>\n",
+       "      <td>0.608626</td>\n",
+       "      <td>0.595898</td>\n",
+       "      <td>0.634117</td>\n",
+       "      <td>0.657895</td>\n",
+       "      <td>0.630704</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.728070</td>\n",
-       "      <td>0.723264</td>\n",
-       "      <td>0.689019</td>\n",
-       "      <td>0.697018</td>\n",
-       "      <td>0.724232</td>\n",
-       "      <td>0.728070</td>\n",
-       "      <td>0.717430</td>\n",
+       "      <td>0.754386</td>\n",
+       "      <td>0.764792</td>\n",
+       "      <td>0.716120</td>\n",
+       "      <td>0.731162</td>\n",
+       "      <td>0.765504</td>\n",
+       "      <td>0.754386</td>\n",
+       "      <td>0.750521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.622807</td>\n",
-       "      <td>0.833520</td>\n",
-       "      <td>0.526646</td>\n",
-       "      <td>0.490434</td>\n",
-       "      <td>0.780957</td>\n",
-       "      <td>0.622807</td>\n",
-       "      <td>0.542286</td>\n",
+       "      <td>0.587719</td>\n",
+       "      <td>0.821315</td>\n",
+       "      <td>0.486242</td>\n",
+       "      <td>0.447778</td>\n",
+       "      <td>0.766595</td>\n",
+       "      <td>0.587719</td>\n",
+       "      <td>0.502076</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K-Nearest Neighbors</th>\n",
-       "      <td>0.570175</td>\n",
-       "      <td>0.573016</td>\n",
-       "      <td>0.528367</td>\n",
-       "      <td>0.512029</td>\n",
-       "      <td>0.586685</td>\n",
-       "      <td>0.570175</td>\n",
-       "      <td>0.548058</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.460883</td>\n",
+       "      <td>0.458142</td>\n",
+       "      <td>0.428231</td>\n",
+       "      <td>0.477247</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.463540</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -353,33 +373,33 @@
       "text/plain": [
        "                         Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                          \n",
-       "Logistic Regression      0.675439               0.728956            0.610374   \n",
-       "Support Vector Machine   0.552632               0.501618            0.444444   \n",
-       "Multinomial Naive Bayes  0.710526               0.717405            0.653565   \n",
-       "Decision Tree            0.728070               0.723264            0.689019   \n",
-       "Random Forest            0.622807               0.833520            0.526646   \n",
-       "K-Nearest Neighbors      0.570175               0.573016            0.528367   \n",
+       "Logistic Regression      0.657895               0.689363            0.580004   \n",
+       "Support Vector Machine   0.464912               0.486726            0.343434   \n",
+       "Multinomial Naive Bayes  0.657895               0.619405            0.608626   \n",
+       "Decision Tree            0.754386               0.764792            0.716120   \n",
+       "Random Forest            0.587719               0.821315            0.486242   \n",
+       "K-Nearest Neighbors      0.500000               0.460883            0.458142   \n",
        "\n",
        "                         Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                     \n",
-       "Logistic Regression                  0.611306                  0.709647   \n",
-       "Support Vector Machine               0.390323                  0.519758   \n",
-       "Multinomial Naive Bayes              0.655152                  0.713004   \n",
-       "Decision Tree                        0.697018                  0.724232   \n",
-       "Random Forest                        0.490434                  0.780957   \n",
-       "K-Nearest Neighbors                  0.512029                  0.586685   \n",
+       "Logistic Regression                  0.572764                  0.678354   \n",
+       "Support Vector Machine               0.229709                  0.499379   \n",
+       "Multinomial Naive Bayes              0.595898                  0.634117   \n",
+       "Decision Tree                        0.731162                  0.765504   \n",
+       "Random Forest                        0.447778                  0.766595   \n",
+       "K-Nearest Neighbors                  0.428231                  0.477247   \n",
        "\n",
        "                         Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                    \n",
-       "Logistic Regression                   0.675439                 0.641975  \n",
-       "Support Vector Machine                0.552632                 0.450792  \n",
-       "Multinomial Naive Bayes               0.710526                 0.685058  \n",
-       "Decision Tree                         0.728070                 0.717430  \n",
-       "Random Forest                         0.622807                 0.542286  \n",
-       "K-Nearest Neighbors                   0.570175                 0.548058  "
+       "Logistic Regression                   0.657895                 0.612296  \n",
+       "Support Vector Machine                0.464912                 0.304535  \n",
+       "Multinomial Naive Bayes               0.657895                 0.630704  \n",
+       "Decision Tree                         0.754386                 0.750521  \n",
+       "Random Forest                         0.587719                 0.502076  \n",
+       "K-Nearest Neighbors                   0.500000                 0.463540  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
