--- a/tfid (>0.8).ipynb
+++ b/tfid (>0.8).ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "# Decision Tree\n",
-    "Ho visto che il decision tree è il modello che mi offre migliori performance"
+    "Ho visto che il decision tree è il modello che mi offre migliori performance, soprattutto con TfIdf e tokenizzazione nltk/regex con stemming PorterStemmer()"
    ]
   },
   {
