--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tecniche di ML a confronto\n",
+    "In questo jupyter vengono confrontate le prestazioni delle varie classificazioni di ciascun modello.\n",
+    "Il metodo utilizzato è TfIdf con una tokenizzazione nltk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Per la realizzazione ho seguito https://www.datacamp.com/tutorial/text-analytics-beginners-nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,22 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"for i, row in dataset_withoutNAN.iterrows():\\n    h_team, a_team, description, prediction = row.h_team, row.a_team, row.description, row.prediction\\n\\n    syn = {}\\n    #cerco nel dizionario di sinonimi, tutti i sinonimi delle squadre del match\\n    for key in jsonObject.keys():\\n        if (h_team in key) or (key in h_team):\\n            syn['home team'] = jsonObject[key] \\n            \\n        if (a_team in key) or (key in a_team):\\n            syn['away team'] = jsonObject[key] \\n\\n    #successivamente prendo il testo e sostituisco i sinonimi con home o away team\\n    description = description.lower()\\n    for key in syn.keys():\\n        for val in syn[key]:\\n            description = description.replace(val.lower(), key)\\n\\n    dataset_withoutNAN.at[i, 'description'] = description\\n\""
-      ]
-     },
-     "execution_count": 217,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"for i, row in dataset_withoutNAN.iterrows():\n",
+    "for i, row in dataset_withoutNAN.iterrows():\n",
     "    h_team, a_team, description, prediction = row.h_team, row.a_team, row.description, row.prediction\n",
     "\n",
     "    syn = {}\n",
@@ -82,13 +80,12 @@
     "        for val in syn[key]:\n",
     "            description = description.replace(val.lower(), key)\n",
     "\n",
-    "    dataset_withoutNAN.at[i, 'description'] = description\n",
-    "\"\"\""
+    "    dataset_withoutNAN.at[i, 'description'] = description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -119,27 +116,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Verona and Sassuolo take on each other in a hi...</td>\n",
+       "      <td>home team and away team take on each other in ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Inter begin their title defence with a match a...</td>\n",
+       "      <td>home team begin their title defence with a mat...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Atalanta will look to make a flying start to t...</td>\n",
+       "      <td>away team will look to make a flying start to ...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Newcomers Empoli will be aiming to kick off th...</td>\n",
+       "      <td>newcomers home team will be aiming to kick off...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>After failing to impress in the 2020/21 Serie ...</td>\n",
+       "      <td>after failing to impress in the 2020/21 serie ...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -148,14 +145,14 @@
       ],
       "text/plain": [
        "                                         description  prediction\n",
-       "0  Verona and Sassuolo take on each other in a hi...           0\n",
-       "1  Inter begin their title defence with a match a...           1\n",
-       "2  Atalanta will look to make a flying start to t...           2\n",
-       "3  Newcomers Empoli will be aiming to kick off th...           2\n",
-       "4  After failing to impress in the 2020/21 Serie ...           2"
+       "0  home team and away team take on each other in ...           0\n",
+       "1  home team begin their title defence with a mat...           1\n",
+       "2  away team will look to make a flying start to ...           2\n",
+       "3  newcomers home team will be aiming to kick off...           2\n",
+       "4  after failing to impress in the 2020/21 serie ...           2"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,28 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(379, 11211)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "vectorizer = TfidfVectorizer(ngram_range=(2,2)) #vectorizer sarà il nostro modello da allenare\n",
-    "X = vectorizer.fit_transform(dataset_withoutNAN.description) #impara il vocabolario e crea Idf, poi ritorna la matrice document-term\n",
-    "\n",
-    "print(X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "vectorizer = TfidfVectorizer(ngram_range=(2,2)) #vectorizer sarà il nostro modello da allenare\n",
     "text_counts = vectorizer.fit_transform(cleaned_corpus) #impara il vocabolario e crea Idf, poi ritorna la matrice document-term\n",
     "df1 = pd.DataFrame(text_counts.toarray(), columns=vectorizer.get_feature_names())"
@@ -270,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -381,13 +357,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.473684</td>\n",
-       "      <td>0.488095</td>\n",
-       "      <td>0.353535</td>\n",
-       "      <td>0.249477</td>\n",
-       "      <td>0.501253</td>\n",
-       "      <td>0.473684</td>\n",
-       "      <td>0.322342</td>\n",
+       "      <td>0.491228</td>\n",
+       "      <td>0.490909</td>\n",
+       "      <td>0.373737</td>\n",
+       "      <td>0.286064</td>\n",
+       "      <td>0.505104</td>\n",
+       "      <td>0.491228</td>\n",
+       "      <td>0.355420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Support Vector Machine</th>\n",
@@ -401,43 +377,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Multinomial Naive Bayes</th>\n",
-       "      <td>0.464912</td>\n",
-       "      <td>0.486726</td>\n",
-       "      <td>0.343434</td>\n",
-       "      <td>0.229709</td>\n",
-       "      <td>0.499379</td>\n",
-       "      <td>0.464912</td>\n",
-       "      <td>0.304535</td>\n",
+       "      <td>0.456140</td>\n",
+       "      <td>0.152047</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.208835</td>\n",
+       "      <td>0.208064</td>\n",
+       "      <td>0.456140</td>\n",
+       "      <td>0.285775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.745614</td>\n",
-       "      <td>0.772110</td>\n",
-       "      <td>0.693065</td>\n",
-       "      <td>0.705473</td>\n",
-       "      <td>0.759809</td>\n",
-       "      <td>0.745614</td>\n",
-       "      <td>0.727895</td>\n",
+       "      <td>0.771930</td>\n",
+       "      <td>0.776683</td>\n",
+       "      <td>0.752967</td>\n",
+       "      <td>0.762113</td>\n",
+       "      <td>0.777115</td>\n",
+       "      <td>0.771930</td>\n",
+       "      <td>0.771776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.622807</td>\n",
-       "      <td>0.833520</td>\n",
-       "      <td>0.526646</td>\n",
-       "      <td>0.490434</td>\n",
-       "      <td>0.780957</td>\n",
-       "      <td>0.622807</td>\n",
-       "      <td>0.542286</td>\n",
+       "      <td>0.605263</td>\n",
+       "      <td>0.827614</td>\n",
+       "      <td>0.506444</td>\n",
+       "      <td>0.469790</td>\n",
+       "      <td>0.773908</td>\n",
+       "      <td>0.605263</td>\n",
+       "      <td>0.522753</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K-Nearest Neighbors</th>\n",
-       "      <td>0.561404</td>\n",
-       "      <td>0.570415</td>\n",
-       "      <td>0.491942</td>\n",
-       "      <td>0.464600</td>\n",
-       "      <td>0.568606</td>\n",
-       "      <td>0.561404</td>\n",
-       "      <td>0.509256</td>\n",
+       "      <td>0.596491</td>\n",
+       "      <td>0.659596</td>\n",
+       "      <td>0.527751</td>\n",
+       "      <td>0.513277</td>\n",
+       "      <td>0.643567</td>\n",
+       "      <td>0.596491</td>\n",
+       "      <td>0.553826</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -446,33 +422,33 @@
       "text/plain": [
        "                         Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                          \n",
-       "Logistic Regression      0.473684               0.488095            0.353535   \n",
+       "Logistic Regression      0.491228               0.490909            0.373737   \n",
        "Support Vector Machine   0.456140               0.152047            0.333333   \n",
-       "Multinomial Naive Bayes  0.464912               0.486726            0.343434   \n",
-       "Decision Tree            0.745614               0.772110            0.693065   \n",
-       "Random Forest            0.622807               0.833520            0.526646   \n",
-       "K-Nearest Neighbors      0.561404               0.570415            0.491942   \n",
+       "Multinomial Naive Bayes  0.456140               0.152047            0.333333   \n",
+       "Decision Tree            0.771930               0.776683            0.752967   \n",
+       "Random Forest            0.605263               0.827614            0.506444   \n",
+       "K-Nearest Neighbors      0.596491               0.659596            0.527751   \n",
        "\n",
        "                         Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                     \n",
-       "Logistic Regression                  0.249477                  0.501253   \n",
+       "Logistic Regression                  0.286064                  0.505104   \n",
        "Support Vector Machine               0.208835                  0.208064   \n",
-       "Multinomial Naive Bayes              0.229709                  0.499379   \n",
-       "Decision Tree                        0.705473                  0.759809   \n",
-       "Random Forest                        0.490434                  0.780957   \n",
-       "K-Nearest Neighbors                  0.464600                  0.568606   \n",
+       "Multinomial Naive Bayes              0.208835                  0.208064   \n",
+       "Decision Tree                        0.762113                  0.777115   \n",
+       "Random Forest                        0.469790                  0.773908   \n",
+       "K-Nearest Neighbors                  0.513277                  0.643567   \n",
        "\n",
        "                         Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                    \n",
-       "Logistic Regression                   0.473684                 0.322342  \n",
+       "Logistic Regression                   0.491228                 0.355420  \n",
        "Support Vector Machine                0.456140                 0.285775  \n",
-       "Multinomial Naive Bayes               0.464912                 0.304535  \n",
-       "Decision Tree                         0.745614                 0.727895  \n",
-       "Random Forest                         0.622807                 0.542286  \n",
-       "K-Nearest Neighbors                   0.561404                 0.509256  "
+       "Multinomial Naive Bayes               0.456140                 0.285775  \n",
+       "Decision Tree                         0.771930                 0.771776  \n",
+       "Random Forest                         0.605263                 0.522753  \n",
+       "K-Nearest Neighbors                   0.596491                 0.553826  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
