folder definitivo con gli script definitivi. Creazione ml_model con tutti i modelli utilizzati per le predizioni e modifica analysis.ipynb per la generazione dei modelli. Accuratezza maggiore 0.6 con il dummy delle variabili

--- a/avg_test_set.ipynb
+++ b/avg_test_set.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,18 +269,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
-    "display(HTML(test.to_html()))"
+    "#display(HTML(test.to_html()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -413,53 +413,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.472143</td>\n",
-       "      <td>0.424786</td>\n",
-       "      <td>0.404762</td>\n",
-       "      <td>0.517744</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.419850</td>\n",
+       "      <td>0.407895</td>\n",
+       "      <td>0.464133</td>\n",
+       "      <td>0.425513</td>\n",
+       "      <td>0.411245</td>\n",
+       "      <td>0.501223</td>\n",
+       "      <td>0.407895</td>\n",
+       "      <td>0.424575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Support Vector Machine</th>\n",
-       "      <td>0.505263</td>\n",
-       "      <td>0.372457</td>\n",
-       "      <td>0.421652</td>\n",
-       "      <td>0.371717</td>\n",
-       "      <td>0.437658</td>\n",
-       "      <td>0.505263</td>\n",
-       "      <td>0.440957</td>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.323148</td>\n",
+       "      <td>0.419157</td>\n",
+       "      <td>0.364515</td>\n",
+       "      <td>0.375768</td>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.423653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.431579</td>\n",
-       "      <td>0.530327</td>\n",
-       "      <td>0.468091</td>\n",
-       "      <td>0.437862</td>\n",
-       "      <td>0.581651</td>\n",
-       "      <td>0.431579</td>\n",
-       "      <td>0.450794</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.431579</td>\n",
-       "      <td>0.530327</td>\n",
-       "      <td>0.468091</td>\n",
-       "      <td>0.437862</td>\n",
-       "      <td>0.581651</td>\n",
-       "      <td>0.431579</td>\n",
-       "      <td>0.450794</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K-Nearest Neighbors</th>\n",
-       "      <td>0.378947</td>\n",
-       "      <td>0.368962</td>\n",
-       "      <td>0.359687</td>\n",
-       "      <td>0.360450</td>\n",
-       "      <td>0.404657</td>\n",
-       "      <td>0.378947</td>\n",
-       "      <td>0.388221</td>\n",
+       "      <td>0.381579</td>\n",
+       "      <td>0.372822</td>\n",
+       "      <td>0.361190</td>\n",
+       "      <td>0.363195</td>\n",
+       "      <td>0.403573</td>\n",
+       "      <td>0.381579</td>\n",
+       "      <td>0.388480</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -468,30 +468,30 @@
       "text/plain": [
        "                        Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                         \n",
-       "Logistic Regression     0.400000               0.472143            0.424786   \n",
-       "Support Vector Machine  0.505263               0.372457            0.421652   \n",
-       "Decision Tree           0.431579               0.530327            0.468091   \n",
-       "Random Forest           0.431579               0.530327            0.468091   \n",
-       "K-Nearest Neighbors     0.378947               0.368962            0.359687   \n",
+       "Logistic Regression     0.407895               0.464133            0.425513   \n",
+       "Support Vector Machine  0.486842               0.323148            0.419157   \n",
+       "Decision Tree           0.447368               0.522764            0.476606   \n",
+       "Random Forest           0.447368               0.522764            0.476606   \n",
+       "K-Nearest Neighbors     0.381579               0.372822            0.361190   \n",
        "\n",
        "                        Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                    \n",
-       "Logistic Regression                 0.404762                  0.517744   \n",
-       "Support Vector Machine              0.371717                  0.437658   \n",
-       "Decision Tree                       0.437862                  0.581651   \n",
-       "Random Forest                       0.437862                  0.581651   \n",
-       "K-Nearest Neighbors                 0.360450                  0.404657   \n",
+       "Logistic Regression                 0.411245                  0.501223   \n",
+       "Support Vector Machine              0.364515                  0.375768   \n",
+       "Decision Tree                       0.450246                  0.563960   \n",
+       "Random Forest                       0.450246                  0.563960   \n",
+       "K-Nearest Neighbors                 0.363195                  0.403573   \n",
        "\n",
        "                        Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                   \n",
-       "Logistic Regression                  0.400000                 0.419850  \n",
-       "Support Vector Machine               0.505263                 0.440957  \n",
-       "Decision Tree                        0.431579                 0.450794  \n",
-       "Random Forest                        0.431579                 0.450794  \n",
-       "K-Nearest Neighbors                  0.378947                 0.388221  "
+       "Logistic Regression                  0.407895                 0.424575  \n",
+       "Support Vector Machine               0.486842                 0.423653  \n",
+       "Decision Tree                        0.447368                 0.460786  \n",
+       "Random Forest                        0.447368                 0.460786  \n",
+       "K-Nearest Neighbors                  0.381579                 0.388480  "
       ]
      },
-     "execution_count": 439,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
