--- a/completati/features.ipynb
+++ b/completati/features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "stats_of_all_teams = {}\n",
-    "for file in sorted(os.listdir(\"SerieA/Season21_22/Matches/\")):\n",
+    "for file in sorted(os.listdir(\"../SerieA/Season21_22/Matches/\")):\n",
     "    if file.endswith(\".csv\"):\n",
     "        team_name = file.replace('.csv', '')\n",
-    "        team_stats = pd.read_csv(\"SerieA/Season21_22/Matches/\"+file, index_col=0)\n",
+    "        team_stats = pd.read_csv(\"../SerieA/Season21_22/Matches/\"+file, index_col=0)\n",
     "        team_stats = team_stats.rename(columns=rename_fields) #rinomino le colonne per avere una nomenclatura \n",
     "        #team_stats = team_stats.drop(columns=['Stadio', 'Avversario', 'Rs', 'team', 'date', 'matchday', 'Risultato'])\n",
     "        team_stats = team_stats.drop(columns=['Stadio', 'Avversario', 'Rs'])\n",
@@ -74,7 +74,7 @@
     "                team_stats.at[index, single_col] = mean\n",
     "        \n",
     "        team_stats['date'] = pd.to_datetime(team_stats['date'], format='%d-%m-%Y') #devo convertire la data altrimenti mi dà problemi quando la lego \n",
-    "        team_stats.to_csv(\"SerieA/Season21_22/AvgStats/\"+file)"
+    "        team_stats.to_csv(\"../SerieA/Season21_22/AvgStats/\"+file)"
    ]
   }
  ],
